# adventofcode

./: .gitignore  LICENSE  README.md
.github/: copilot-instructions.md
.github/instructions/: c.instructions.md  clojure.instructions.md  go.instructions.md  python.instructions.md  r.instructions.md  rust.instructions.md  tcl.instructions.md
2020/01/: advent01a.py  advent01a.sh  advent01b.py  advent01b.sh
2020/02/: advent02a.ps1  advent02b.ps1
2020/03/: advent03a.c  advent03b.c
2020/04/: Advent4A.java  Advent4B.java
2020/05/: advent04a.clj  advent04b.clj  advent05a.clj  advent05b.clj
2020/06/: advent06a.kt  advent06b.kt
2020/07/: advent07a.lua  advent07b.lua
2020/08/: advent08a.clj  advent08a.pl  advent08b.pl
2020/09/: advent09a.chpl  advent09b.chpl
2020/10/: advent10a.groovy  advent10b.groovy
2020/11/: advent11a.r  advent11b.r
2020/12/: advent12a.tcl  advent12b.tcl
2020/13/: Advent13a.scala  Advent13b.scala  sample_input4.txt
2020/14/: advent14.go  advent14a.go
2020/15/: advent15.rb
2020/16/: advent16a.js  advent16b.js
2020/18/: advent18a.php  advent18b.php
2020/19/: advent19a.py  advent19b.py  sample_input2.txt
2021/: requirement.txt
2021/01/: advent01a.py  advent01b.py
2021/02/: advent02a.py  advent02b.py
2021/03/: advent03a.py  advent03b.py
2021/04/: advent04a.py  advent04b.py
2021/05/: advent05a.py  advent05b.py  (+1 more)
2022/: skel.py
2023/: skel.sh
2025/: README.md  justfile  skel.py
2025/06/python/: pyproject.toml
2025/06/python/src/advent/: __init__.py
2025/skel/python/: README.md  pyproject.toml
(+90 files in other folders)
