[project]
name = "advent"
version = "0.1.0"
description = "Advent of Code solution"
requires-python = ">=3.14"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
advent = "advent:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]
